--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
  <html lang="en">
  <head>
    <meta charset="UTF-8">
@@ -16,6 +16,19 @@
      nav { max-width:1100px; margin:0 auto; display:flex; justify-content:space-between; align-items:center; padding:1rem 2rem; }
      nav a { margin-left:1.5rem; font-weight:600; color:#555; transition:color 0.3s; }
      nav a:hover { color:#000; }
+ 
+     .menu-toggle {
+       display: none;
+       font-size: 1.8rem;
+       cursor: pointer;
+       color: #333;
+     }
+ 
+     .nav-links {
+       display: flex;
+       flex-wrap: wrap;
+       align-items: center;
+     }
  
      /* Hero */
      .hero { display:flex; flex-direction:column; align-items:center; justify-content:center; height:100vh; text-align:center; padding:0 2rem; background:#f5f5f5; }
@@ -41,12 +54,10 @@
      .job ul { margin-top:0.5rem; padding-left:1rem; color:#555; }
  
      /* Projects */
-     .projects { display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:1.5rem; }
-     .project { background:#f8f8f8; border-radius:10px; overflow:hidden; transition:transform 0.3s, box-shadow 0.3s; display:flex; flex-direction:column; }
+     .projects { display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:1.5rem; }
+     .project { background:#f8f8f8; border-radius:10px; padding:1rem 1.25rem; transition:transform 0.3s, box-shadow 0.3s; }
      .project:hover { transform:translateY(-5px); box-shadow:0 8px 16px rgba(0,0,0,0.15); }
-     .project img { width:100%; display:block; height:auto; }
-     .project-content { padding:0.75rem 1rem; display:flex; flex-direction:column; gap:0.25rem; }
-     .project-content h3 { margin:0; font-size:1.1rem; color:#000; }
+     .project-content h3 { margin-bottom:0.5rem; font-size:1.1rem; color:#000; }
      .project-content p { font-size:0.9rem; color:#555; margin:0; }
  
      /* Skills */
@@ -80,11 +91,34 @@
      .contact-info a:hover { color:#000; }
  
      /* Footer */
-     footer { background:#333; color:#fff; text-align:center; padding:2rem; }
-     footer a { margin:0 0.5rem; color:#fff; transition:0.3s; }
-     footer a:hover { color:#ddd; }
+     footer { background:#1a1a1a; color:#eee; text-align:center; padding:2rem 1rem; font-size:0.95rem; }
+     footer p { margin:0.5rem 0; }
+     footer a { color:#ffcc00; font-weight:600; text-decoration:none; }
+     footer a:hover { color:#fff; }
  
-     @media(max-width:768px){ .about{flex-direction:column;} }
+     /* Responsive Adjustments */
+     @media (max-width: 768px) {
+       .menu-toggle { display: block; }
+       .nav-links {
+         display: none;
+         flex-direction: column;
+         background: #fff;
+         position: absolute;
+         top: 60px;
+         right: 0;
+         width: 200px;
+         box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+         padding: 1rem;
+       }
+       .nav-links a {
+         margin: 0.5rem 0;
+         font-size: 1rem;
+         color: #333;
+       }
+       .nav-links.active {
+         display: flex;
+       }
+     }
    </style>
  </head>
  <body>
@@ -93,7 +127,8 @@
    <header>
      <nav>
        <div class="logo"><strong>Dharani E S</strong></div>
-       <div>
+       <div class="menu-toggle" id="menu-toggle">☰</div>
+       <div class="nav-links" id="nav-links">
          <a href="#about">About</a>
          <a href="#experience">Experience</a>
          <a href="#projects">Projects</a>
@@ -154,14 +189,12 @@
      <h2>Projects</h2>
      <div class="projects">
        <div class="project">
-         <img src="https://via.placeholder.com/400x150" alt="Breast Cancer Classification">
          <div class="project-content">
            <h3>Breast Cancer Classification</h3>
            <p>Built medical classification system using ML algorithms and big data techniques for tumor prediction.</p>
          </div>
        </div>
        <div class="project">
-         <img src="https://via.placeholder.com/400x150" alt="Library Management System">
          <div class="project-content">
            <h3>Library Management System</h3>
            <p>Web-based application automating library operations with JSP frontend and MySQL backend.</p>
@@ -212,8 +245,16 @@
  
    <!-- Footer -->
    <footer>
-     <p><p>Stay curious, keep coding! ✨</p></p>
+     <p>Stay curious, keep coding! ✨</p>
    </footer>
  
+   <script>
+     const menuToggle = document.getElementById("menu-toggle");
+     const navLinks = document.getElementById("nav-links");
+ 
+     menuToggle.addEventListener("click", () => {
+       navLinks.classList.toggle("active");
+     });
+   </script>
  </body>
  </html>
