--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
  
    <!-- Hero -->
    <section class="hero">
-     <img src="https://via.placeholder.com/150" alt="Profile Photo">
+     <img src="dharani.jpg" alt="Profile Photo">
      <h1>Hello, I'm Dharani E S</h1>
      <p>Software Development Engineer | Full-Stack Developer | Data & Cloud Enthusiast</p>
      <a href="#projects" class="btn-primary">Explore My Work</a>
