--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
    <section class="hero">
      <img src="dharani.jpg" alt="Profile Photo">
      <h1>Hello, I'm Dharani E S</h1>
-     <p>Software Development Engineer</p>
+     <p>Developer</p>
      <a href="#projects" class="btn-primary">Explore My Work</a>
    </section>
  
