--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
    <!-- Header -->
    <header>
      <nav>
-       <div class="logo"><strong>Dharani E S</strong></div>
+       <div class="logo"><strong>Dharani</strong></div>
        <div class="menu-toggle" id="menu-toggle">☰</div>
        <div class="nav-links" id="nav-links">
          <a href="#about">About</a>
@@ -142,7 +142,7 @@
    <!-- Hero -->
    <section class="hero">
      <img src="dharani.jpg" alt="Profile Photo">
-     <h1>Hello, I'm Dharani E S</h1>
+     <h1>Hello, I'm Dharani </h1>
      <p>Developer</p>
      <a href="#projects" class="btn-primary">Explore My Work</a>
    </section>
